--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ strong  {
 
     <header>
         <div class="content">
-            <img src="https://github.com/taniakapoor98/Portfolio/blob/main/pic.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="pic.jpg" alt="Profile Picture" class="profile-pic">
             <h1>Hi, I'm Tania Kapoor</h1>
             <p id="role-text">AI/ML Engineer | Data Scientist</p>
             <p id="header-quote" class="header-quote">
