--- a/index.html
+++ b/index.html
@@ -611,7 +611,21 @@ strong  {
             </p>
         </div>
     </header>
-
+	<div class="connect-links" style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
+                <a href="mailto:kapoortania0@gmail.com" target="_blank" style="color: #fff; text-decoration: none; display: flex; align-items: center;">
+                    <img src="https://img.icons8.com/material-outlined/24/ffffff/email.png" alt="Email Icon" style="width: 24px; height: 24px; margin-right: 5px;">
+                    Email
+                </a>
+                <a href="https://www.linkedin.com/in/tania-kapoor-0450b0188/" target="_blank" style="color: #fff; text-decoration: none; display: flex; align-items: center;">
+                    <img src="https://img.icons8.com/material-outlined/24/ffffff/linkedin.png" alt="LinkedIn Icon" style="width: 24px; height: 24px; margin-right: 5px;">
+                    LinkedIn
+                </a>
+                <a href="https://github.com/taniakapoor98" target="_blank" style="color: #fff; text-decoration: none; display: flex; align-items: center;">
+                    <img src="https://img.icons8.com/material-outlined/24/ffffff/github.png" alt="GitHub Icon" style="width: 24px; height: 24px; margin-right: 5px;">
+                    GitHub
+                </a>
+                
+            </div>
     <div class="container">
         <section id="about">
             <p class="about-quote">Since childhood, I’ve been driven by a personal desire to make a difference in people’s lives.. A passion that led me to the world of AI and data science. I see these tools as powerful ways to turn raw information into solutions that help people live more comfortable, healthy, and happy lives. To me, every data point is a chance to uncover a story.. A chance to build something that sparks a meaningful change by blending technical creativity with real-world purpose using cutting-edge models and dynamic systems..</p>
