--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ strong  {
 
     <header>
         <div class="content">
-           <img src="pic.jpg" alt="Profile Picture" class="profile-pic">
+           <img src="pic2.jpg" alt="Profile Picture" class="profile-pic">
             <h1>Hi, I'm Tania Kapoor</h1>
             <p id="role-text">AI/ML Engineer | Data Scientist</p>
             <p id="header-quote" class="header-quote">
@@ -618,7 +618,7 @@ strong  {
         </section>
 
         <section id="projects">
-            <h2>Innovative Creations</h2>
+            <h2>Top Innovative Creations</h2>
             <div class="projects-grid">
                 <div class="project" data-modal="modal1">
                     <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTJidXM3YmJyZWZkOXJmNnhlcHFxaDk4bzNldXliand0OGx1NjM2aCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/D8KpfyMWk53FK/giphy.gif" alt="Analytics Dashboard" class="project-img">
